--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -1,15 +1,38 @@
-{% extends "base.html" %}
-{% block title %}{{ title }}| Atem Project{% endblock %}
-{% block header %}
-<header>
-    <h1>Atem Project</h1>
-</header>
-{% endblock %}
+{% extends "standard.html" %}
+{% block title %}Atem Tooling Expressive Models{% endblock %}
 {% block body %}
 <nav>
-<!-- This is an initial poor-mans sitemap -->
-{% for item in ALL_LINKS %}
-    <li><a href="{{ url_for(item[0], **item[1]) }}">{{item[0]}}:{{item[1].get('filename','/')}}</a></li>{% endfor %}
+    <ul>
+        <li>
+            <a href="#" title="to the tool page">Power tools for creative minds.</a>
+            <p>
+            We will provide gradually more advanced access to the software internals, and by being libre,
+            there’s no limits to how deep you can go. We offer the potential for <strong>new ways of
+            working</strong> and <strong>new ways to solve design problems</strong>.
+            </p>
+        </li>
+        <li>
+            <a href="#" title="to the developers and contributors page"></a>
+            <p>
+            Fonts for the world! Atem is an infrastructure project that will have the most impact in
+            the parts of the world that need big fonts with 1,000s or 10,000s of glyphs.
+            </p><p>
+            And Atem can be much more than making fonts, build your own creative
+            applications using Atem concepts and tooling.
+            </p><p>
+            We have a lot to do <strong>for all levels of experience</strong>,
+            <i>this is the way to the developers and contributors page.</i>
+            </p>
+        </li>
+        <li>
+            A block with links to communications channels
+            <a href="#">twitter (symbol)</a>
+            <a href="#">newsfeed (symbol)</a>
+            <a href="#">github (symbol)</a>
+            <h3><a href="#to the blog">News</a></h3>
+            <p>Links to the 3 most recent news entires. Is there a difference between news and blog? I think we have no blog, and news should be kept short.</p>
+        </li>
+    </ul>
 </nav>
-<article>{{ content }}</article>
 {% endblock %}
+{% block footer %}<footer><a href="#">Sitemap</a> <a href="#">Impressum</a></footer>{% endblock %}
