--- a/website/templates/standard.html
+++ b/website/templates/standard.html
@@ -1,10 +1,57 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}| Atem Project{% endblock %}
+{% from 'stdlib.html' import rendermenu with context %}
+{% block title %}{{ title }} | Atem Tooling Expressive Models{% endblock %}
+{% block head %}
+
+<link rel="stylesheet" type="text/css"
+      href="{{ url_for('files', filename='main.css') }}" />
+
+{% endblock %}
 {% block header %}
 <header>
-    <h1>Atem Project</h1>
+    <h1><img class="logo" alt="Atem Tooling Expressive Models" src="{{ url_for('files', filename='Atem-Logo.svg') }}" /></h1>
+    <nav class="main-menu">
+        <ul class="top-level">
+            {%set url, title, active = menu.getLink('__root__:index') %}
+            <li class="{% if active %}active{% endif %}">
+            <a href="{{url}}">{{title}}</a>
+            </li><!--
+            {% if user_menu %}
+             --><li class="sub-level"><ul>
+                    <li><a href="#">News</a></li><!--
+                 --><li><a href="#">Vision</a></li><!--
+                 --><li><a href="#">Contribute</a></li>
+                </ul></li><!--
+            {% endif %}
+            {%set url, title, active = menu.getLink('__root__', filename='docs.md') %}
+         --><li class="{% if active %}active{% endif %}">
+            <a href="{{url}}">{{title}}</a>
+            </li><!--
+            {% if docs_menu == True %}
+             --><li class="sub-level"><ul>
+                    <!--
+                    {% for endpoint, viewArgs in (
+                            ('content/Concepts:index', None)
+                          , ('content/Proposals:index', None)
+                          , ('content/Manuals:index', None)
+
+                    ) %}
+                    {%set url, title, active = menu.getLink(endpoint, **(viewArgs or {})) %}
+                    --><li class="{% if active %}active{% endif %}">
+                       <a href="{{url}}">{{title}}</a></li><!--
+                    {% endfor %}
+                    --><li><a href="#">API</a></li>
+                </ul></li><!--
+            {% endif %}
+         --><li class="sub-level"><ul><li><a href="#">Help</a></li></ul></li>
+        </ul>
+    </nav>
 </header>
 {% endblock %}
 {% block body %}
 <article>{{ content }}</article>
+{% endblock %}
+{% block footer %}
+<h3>sitemap</h3>
+<nav>{{rendermenu()}}</nav>
 {% endblock %}
