--- a/website/templates/proposals.html
+++ b/website/templates/proposals.html
@@ -1,4 +1,4 @@
 {% extends "standard.html" %}
 {% from 'stdlib.html' import rendermenu with context %}
 {% block title %}{{ title }} | Proposals | Atem Tooling Expressive Models{% endblock %}
-{% block footer %}<nav>{{rendermenu(['content/Proposals'])}}</nav>{% endblock %}
+{% block fooooooter %}<footer><nav>{{rendermenu(['content/Proposals'])}}</nav></footer>{% endblock %}
