--- a/files/main.css
+++ b/files/main.css
@@ -9,7 +9,7 @@ body {
    margin: 0 auto;
 }
 
-header h1 {
+header.page h1 {
    text-align: center;
    margin: .5em 0 0 0;
 }
@@ -21,18 +21,89 @@ h1 {
 }
 
 article {
-   /* A line of text should not be too long */
-   max-width: 40em;
    line-height: 1.3em;
 }
 
-header{
-   border-bottom: 3px solid black;
+article.standard,
+article.docs,
+article.blogpost .content {
+   /*
+      A line of text should not be too long
+      like  but works good to get the after link on the
+      right side of the page
+    */
+   max-width: 40em;
 }
 
-header h1 img.logo {
-   width:220px
+nav.sub, article.docs {
+    display: inline-block;
+    vertical-align: top;
+    box-sizing: border-box;
 }
+
+nav.sub {
+   max-width: calc(100% - 40em);
+   min-width: 12em;
+}
+
+nav.sub ul{
+   margin: 0;
+   padding: 0;
+   list-style: inside;
+}
+
+article.sitemap {
+   max-width: 100%;
+}
+
+article.standard,
+article.docs,
+article.blogpost > *,
+nav.sub {
+   padding: 0 .3em;
+}
+
+header.page{
+   border-bottom: 3px solid black;
+   position: relative;
+}
+footer.page{
+   border-top: 3px solid black;
+   padding: 1em 0;
+   text-align: center;
+   margin-top: 3em;
+}
+
+header.page a.connect {
+   position: absolute;
+   text-indent: 100%;
+   white-space: nowrap;
+   overflow: hidden;
+   background: no-repeat;
+   background-size: contain;
+   width: 25px;
+   height: 25px;
+   margin: 55px 5px 0 0;
+   right: 0;
+}
+
+header.page a.github {
+
+   background-image: url("GitHub-icon.svg");
+}
+header.page a.twitter {
+   background-image: url("Twitter-icon.svg");
+   top: 30px;
+}
+header.page a.feed {
+   background-image: url("Feed-icon.svg");
+   top: 60px;
+}
+header.page a.gplus {
+   background-image: url("Gplus-icon.svg");
+   top: 90px;
+}
+
 
 header .main-menu ul,
 header .main-menu li {
@@ -76,3 +147,72 @@ header .main-menu .top-level > li.active > a {
     letter-spacing: .01em;
 }
 
+.blogpost nav.relative{
+   height: 1.3em;
+   position: relative;
+}
+
+hr,
+.blogpost header {
+   border-bottom: 1px solid black;
+}
+
+.sitemap .endpoint{
+   display: inline-block;
+   width: 50%;
+   vertical-align: top;
+   border-top: 1px solid black;
+}
+
+.sitemap .endpoint > ul {
+   max-height: 15em;
+   overflow-y: auto;
+}
+
+.sitemap .endpoint:nth-child(1),
+.sitemap .endpoint:nth-child(2) {
+   border-top: none;
+}
+
+
+.sitemap .endpoint:nth-child(2n+1){
+    border-right: 1px solid black;
+    box-sizing: border-box;
+}
+
+.sitemap .endpoint:nth-child(2n){
+    border-left: 1px solid black;
+    box-sizing: border-box;
+    margin-left: -1px;
+    padding-left: .5em;
+}
+
+.blogpost header {
+   padding-bottom: 1em;
+   margin-bottom: 1em;
+}
+
+.blogpost header h1{
+   margin-bottom: .2em;
+}
+
+.blogpost header *:last-child{
+      margin-bottom: 0;
+}
+
+.blogpost .summary:before {
+   content: 'tl;dr';
+   font-style: normal;
+   font-weight: bold;
+   display: block;
+   font-size: 1.2em;
+}
+
+.blogpost .summary {
+   font-style: italic;
+}
+
+.blogpost nav.relative a.next {
+   position: absolute;
+   right: 0;
+}
