--- a/website/templates/docs.html
+++ b/website/templates/docs.html
@@ -1,6 +1,6 @@
 {% extends "standard.html" %}
 {% from 'stdlib.html' import rendermenu with context %}
-{% block title %}{{ title }} | {{index_link_name}} | Atem Tooling Expressive Models{% endblock %}
+{% block bodyclass %}docs{% endblock %}
 
 {% block body %}
 <nav class="sub">
