--- a/website/templates/lib.html
+++ b/website/templates/lib.html
@@ -3,7 +3,7 @@
     <li class="{% if active %}active{% endif %}">
     {%- set fileItem =  meta['fileItem'] -%}
     {%- set datetime, setup = fileItem.times[0], fileItem.setup -%}
-    <time datetime="{{datetime}}">{{datetime}}</time> <a href="{{url}}">{{ setup['title'] or name}}</a></li>
+    <time datetime="{{datetime.isoformat()}}">{{datetime}}</time> <a href="{{url}}">{{ setup['title'] or name}}</a></li>
     {%- if setup['summary'] -%}
     <p>{{ setup['summary'] }} <a href="{{url}}">more</a></p>
     {%- endif -%}
