add classes via head mater

--- a/website/templates/standard.html
+++ b/website/templates/standard.html
@@ -100,7 +100,7 @@
 </header>
 {% endblock %}
 {% block body %}
-<article class="standard">{{ content }}</article>
+<article class="standard {{ class }}">{{ content }}</article>
 {% endblock %}
 {% block footer %}
 <footer class="page">
